--- a/src/components/Gallery/styles.css
+++ b/src/components/Gallery/styles.css
@@ -1,3 +1,17 @@
+.Gallery {
+    position: relative;
+}
+
+.Gallery__loader {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+    top: 130px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 5;
+}
+
 .Gallery__controls {
     display: flex;
     flex-direction: row;
